theming : Text align of the footer. Font size of wysiwyg li element. Position top of memory cart panel. Fix bug top activities display.

--- a/sites/all/modules/memory_blocks/css/memory_footer.css
+++ b/sites/all/modules/memory_blocks/css/memory_footer.css
@@ -31,6 +31,7 @@ div#memory-footer > div {
     grid-gap: 0 50px;
     grid-template-columns: repeat(4, calc(21% - (200px/5))) calc(16% - (200px/5));
     grid-template-rows: auto auto auto 60px;
+    text-align: left;
 }
 
 div#first-col {
